@@ -3,6 +3,7 @@ package org.hl7.fhir.r5.terminologies.client;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.*;
@@ -20,7 +21,7 @@ import org.hl7.fhir.r5.terminologies.client.TerminologyClientContext.Terminology
 import org.hl7.fhir.r5.terminologies.utilities.TerminologyCache;
 import org.hl7.fhir.r5.terminologies.utilities.TerminologyCache.SourcedCodeSystem;
 import org.hl7.fhir.r5.terminologies.utilities.TerminologyCache.SourcedValueSet;
-import org.hl7.fhir.r5.utils.UserDataNames;
+import org.hl7.fhir.utilities.UserDataNames;
 import org.hl7.fhir.utilities.*;
 import org.hl7.fhir.utilities.filesystem.ManagedFileAccess;
 import org.hl7.fhir.utilities.http.ManagedWebAccess;
@@ -28,7 +29,7 @@ import org.hl7.fhir.utilities.json.model.JsonObject;
 import org.hl7.fhir.utilities.json.parser.JsonParser;
 import org.hl7.fhir.utilities.settings.FhirSettings;
 
-@MarkedToMoveToAdjunctPackage
+
 public class TerminologyClientManager {
 
   private ImplicitValueSets implicitValueSets;
@@ -37,6 +38,7 @@ public class TerminologyClientManager {
     private String url;
     private List<String> authoritative = new ArrayList<String>();
     private List<String> candidates = new ArrayList<String>();
+    private String language; // the language this resolution was made for (null = no language; see Language Specific Claims in the tx ecosystem IG)
     
     public ServerOptionList(String url, String address) {
       this.url = url;
@@ -68,7 +70,7 @@ public class TerminologyClientManager {
 
     @Override
     public String toString() {
-      return "["+url+ "]: authoritative = " + CommaSeparatedStringBuilder.join("|", authoritative)+ ", candidates=" + CommaSeparatedStringBuilder.join("|", candidates);
+      return "["+url+(language == null ? "" : " in "+language)+ "]: authoritative = " + CommaSeparatedStringBuilder.join("|", authoritative)+ ", candidates=" + CommaSeparatedStringBuilder.join("|", candidates);
     }    
     
   }
@@ -77,11 +79,6 @@ public class TerminologyClientManager {
     return factory;
   }
 
-  public interface ITerminologyClientFactory {
-    ITerminologyClient makeClient(String id, String url, String userAgent, ToolingClientLogger logger) throws URISyntaxException;
-    String getVersion();
-  }
-  
   public class InternalLogEvent {
     private boolean error;
     private String message;
@@ -157,6 +154,12 @@ public class TerminologyClientManager {
 
   private int ecosystemfailCount;
 
+  // Set once by shutdown(). A manager must release its hold on each server context
+  // exactly once, or the holder count those contexts keep goes wrong and a shared
+  // cache is closed while another manager is still using it - so repeat shutdowns
+  // (unload() is a best-effort path that may run more than once) do nothing here.
+  private boolean isShutdown;
+
   public TerminologyClientManager(ITerminologyClientFactory factory, ILoggingService logger) {
     super();
     this.factory = factory;
@@ -164,7 +167,17 @@ public class TerminologyClientManager {
     implicitValueSets = new ImplicitValueSets(null);
   }
 
+  /**
+   * Adopt another manager's servers. Note that this shares the server contexts by
+   * reference - it does not build new ones - so afterwards both managers are using
+   * the same connections and the same server-side terminology caches. Each context
+   * is retained here so it knows it now has two holders, and only releases its
+   * cache when the last of them shuts down (see TerminologyClientContext.shutdown).
+   */
   public void copy(TerminologyClientManager other) {
+    for (TerminologyClientContext server : other.serverList) {
+      server.retain();
+    }
     serverList.addAll(other.serverList);
     serverMap.putAll(other.serverMap);
     resMap.putAll(other.resMap);
@@ -177,16 +190,31 @@ public class TerminologyClientManager {
 
 
   public TerminologyClientContext chooseServer(ValueSet vs, Set<String> systems, boolean expand) throws TerminologyServiceException {
+    return chooseServer(vs, systems, expand, null);
+  }
+
+  /**
+   * Choose a server for a set of code systems.
+   * 
+   * language is the language(s) of the request being routed, in Accept-Language syntax, or null.
+   * Language specific authoritative claims in the ecosystem registration are only considered when
+   * a language is passed, so it should only be provided when the operation being routed is language
+   * sensitive (an expansion where the display language matters, a validation that checks a display,
+   * a lookup that returns designations). The routing language and the language on the subsequent
+   * operation must agree, or the routing is meaningless.
+   */
+  public TerminologyClientContext chooseServer(ValueSet vs, Set<String> systems, boolean expand, String language) throws TerminologyServiceException {
     if (serverList.isEmpty()) {
       return null;
     }
     if (systems.contains(UNRESOLVED_VALUESET) || systems.isEmpty() || !useEcosystem) {
       return getMaster();
     }
+    language = effectiveLanguage(language, expand);
     
     List<ServerOptionList> choices = new ArrayList<>();
     for (String s : systems) {
-      choices.add(findServerForSystem(s, expand));
+      choices.add(findServerForSystem(s, language));
     }    
     
     // first we look for a server that's authoritative for all of them
@@ -200,7 +228,7 @@ public class TerminologyClientManager {
         }
         if (ok) {
           log(vs, s, systems, choices, "Found authoritative server "+s);
-          return findClient(s, systems, expand);
+          return findClientContext(s, systems, expand);
         }
       }
     }
@@ -216,7 +244,7 @@ public class TerminologyClientManager {
         }
         if (ok) {
           log(vs, s, systems, choices, "Found partially authoritative server "+s);
-          return findClient(s, systems, expand);
+          return findClientContext(s, systems, expand);
         }
       }
     }
@@ -228,7 +256,7 @@ public class TerminologyClientManager {
       if (Utilities.existsInList(uri, "http://snomed.info/sct") && systems.size() > 1) {
         Set<String> sct = new HashSet<>();
         sct.add("http://snomed.info/sct");
-        return chooseServer(vs, sct, expand);
+        return chooseServer(vs, sct, expand, language);
       }
       if (Utilities.existsInList(uri, "http://unitsofmeasure.org", "http://loinc.org", "http://snomed.info/sct",
         "http://www.nlm.nih.gov/research/umls/rxnorm", "http://hl7.org/fhir/sid/cvx", "urn:ietf:bcp:13", "urn:ietf:bcp:47",
@@ -241,7 +269,21 @@ public class TerminologyClientManager {
       }
     }
 
-    choices.forEach(choice -> checkActuallySupports(choice));
+    // check the candidates actually support the code system - but filter a copy: the
+    // ServerOptionList objects are cached in resMap (and persisted to system-map.json),
+    // and must keep recording what the registry actually said, not the outcome of a
+    // possibly-transient support check
+    List<ServerOptionList> filteredChoices = new ArrayList<>();
+    for (ServerOptionList choice : choices) {
+      ServerOptionList filtered = checkActuallySupports(choice);
+      if (filtered.candidates.size() < choice.candidates.size()) {
+        List<String> removed = new ArrayList<>(choice.candidates);
+        removed.removeAll(filtered.candidates);
+        log(vs, null, systems, choices, "Candidate server(s) "+CommaSeparatedStringBuilder.join("|", removed)+" dropped for "+choice.url+": no usable copy of the code system found there");
+      }
+      filteredChoices.add(filtered);
+    }
+    choices = filteredChoices;
 
     // now we look for a server that's a candidate for all of them
     for (ServerOptionList ol : choices) {
@@ -254,7 +296,7 @@ public class TerminologyClientManager {
         }
         if (ok) {
           log(vs, s, systems, choices, "Found candidate server " + s);
-          return findClient(s, systems, expand);
+          return findClientContext(s, systems, expand);
         }
       }
     }
@@ -274,7 +316,7 @@ public class TerminologyClientManager {
         .orElse(null);
     if (max != null) {
       log(vs, max, systems, choices, "Found most authoritative server "+max);
-      return findClient(max, systems, expand);
+      return findClientContext(max, systems, expand);
     }
 
     // no agreement? Then what we do depends     
@@ -289,14 +331,14 @@ public class TerminologyClientManager {
         } else {
           log(vs, el, systems, choices, "Handled by multiple servers. Using source @ '"+el+"'");
         }        
-        return findClient(el, systems, expand);
+        return findClientContext(el, systems, expand);
       } else {
         if (systems.size() == 1) {
           log(vs, serverList.get(0).getAddress(), systems, choices, "System not handled by any servers. Using primary server");
         } else {
           log(vs, serverList.get(0).getAddress(), systems, choices, "Systems handled by multiple servers. Using primary server");
         }
-        return findClient(serverList.get(0).getAddress(), systems, expand);
+        return findClientContext(serverList.get(0).getAddress(), systems, expand);
       }      
     } else {
       if (systems.size() == 1) {
@@ -305,17 +347,20 @@ public class TerminologyClientManager {
         log(vs, serverList.get(0).getAddress(), systems, choices, "Systems handled by multiple servers. Using primary server");
       }
       log(vs, serverList.get(0).getAddress(), systems, choices, "Fallback: primary server");
-      return findClient(serverList.get(0).getAddress(), systems, expand);
+      return findClientContext(serverList.get(0).getAddress(), systems, expand);
     }
   }
 
-  private void checkActuallySupports(ServerOptionList choice) {
+  private ServerOptionList checkActuallySupports(ServerOptionList choice) {
     for (String s : choice.candidates) {
       if (isTxFhirOrg(s)) {
-        return;
+        return choice;
       }
     }
-    choice.candidates.removeIf(server -> !isSupportedServer(server, choice.url));
+    ServerOptionList res = new ServerOptionList(choice.url, choice.authoritative, choice.candidates);
+    res.language = choice.language;
+    res.candidates.removeIf(server -> !isSupportedServer(server, choice.url));
+    return res;
   }
 
   private boolean isSupportedServer(String server, String url) {
@@ -326,8 +371,8 @@ public class TerminologyClientManager {
   }
 
   private boolean isTxFhirOrg(String s) {
-    String server = s.replace("https://", "http://");
-    return Utilities.startsWithInList(server, "http://tx.fhir.org/", "http://tx-dev.fhir.org/");
+    String server = s.replace("http://", "https://");
+    return Utilities.startsWithInList(server, "https://tx.fhir.org/", "https://tx-dev.fhir.org/");
   }
 
   private TerminologyClientContext findPrimaryServer(List<TerminologyClientContext> serverList) {
@@ -340,23 +385,31 @@ public class TerminologyClientManager {
   }
 
   public TerminologyClientContext chooseServer(String vs, boolean expand) throws TerminologyServiceException {
+    return chooseServer(vs, expand, null);
+  }
+
+  public TerminologyClientContext chooseServer(String vs, boolean expand, String language) throws TerminologyServiceException {
     if (serverList.isEmpty()) {
       return null;
     }
     if (IGNORE_TX_REGISTRY || !useEcosystem) {
-      return findClient(getMasterClient().getAddress(), null, expand);
+      return findClientContext(getMasterClient().getAddress(), null, expand);
     }
+    language = effectiveLanguage(language, expand);
     String request = Utilities.pathURL(monitorServiceURL, "resolve?fhirVersion="+factory.getVersion()+"&valueSet="+Utilities.URLEncode(vs));
     if (usage != null) {
       request = request + "&usage="+usage;
     } 
+    if (language != null) {
+      request = request + "&language="+Utilities.URLEncode(language);
+    }
     try {
-      JsonObject json = JsonParser.parseObjectFromUrl(request);
+      JsonObject json = fetchRegistryJson(request);
       for (JsonObject item : json.getJsonObjects("authoritative")) {
-        return findClient(item.asString("url"), null, expand);
+        return findClientContext(item.asString("url"), null, expand);
       }
       for (JsonObject item : json.getJsonObjects("candidates")) {
-        return findClient(item.asString("url"), null, expand);
+        return findClientContext(item.asString("url"), null, expand);
       }
     } catch (Exception e) {
       String msg = "Error resolving valueSet "+vs+": "+e.getMessage();
@@ -375,7 +428,7 @@ public class TerminologyClientManager {
     internalLog.add(new InternalLogEvent(message, server, svs, sys, sch));
   }
 
-  private TerminologyClientContext findClient(String server, Set<String> systems, boolean expand) {
+  private TerminologyClientContext findClientContext(String server, Set<String> systems, boolean expand) {
     server = ManagedWebAccess.makeSecureRef(server);
     TerminologyClientContext client = serverMap.get(server);
     if (client == null) {
@@ -392,23 +445,36 @@ public class TerminologyClientManager {
     return client;
   }
 
-  private ServerOptionList findServerForSystem(String s, boolean expand) throws TerminologyServiceException {
-    ServerOptionList serverList = resMap.get(s);
+  /**
+   * All access to the ecosystem coordination server (tx-reg) goes through here, so that
+   * tests can supply their own registry responses without any network access
+   * (see TerminologyClientManagerLanguageTest)
+   */
+  protected JsonObject fetchRegistryJson(String request) throws IOException, org.hl7.fhir.utilities.json.JsonException {
+    return JsonParser.parseObjectFromUrl(request);
+  }
+
+  private ServerOptionList findServerForSystem(String s, String language) throws TerminologyServiceException {
+    // resolutions are language specific - the server chosen for German requests is not the
+    // right resolution for the same code system in English - so resolutions are remembered
+    // (and persisted) against both the code system and the language they were made for
+    String key = language == null ? s : s+" in "+language;
+    ServerOptionList serverList = resMap.get(key);
     if (serverList == null) {
-      serverList = decideWhichServer(s);
+      serverList = decideWhichServer(s, language);
       // testing support
       try {
         serverList.replace("tx.fhir.org", host());
       } catch (MalformedURLException e) {
       }
-      resMap.put(s, serverList);
+      resMap.put(key, serverList);
       save();
     }
     return serverList;
   }
 
   private String host() throws MalformedURLException {
-    URL url = new URL(getMasterClient().getAddress());
+    URL url = URI.create(getMasterClient().getAddress()).toURL();
     if (url.getPort() > 0) {
       return url.getHost()+":"+url.getPort();
     } else {
@@ -416,7 +482,29 @@ public class TerminologyClientManager {
     }
   }
 
-  private ServerOptionList decideWhichServer(String url) {
+  /**
+   * The language to use for routing: whatever the caller passed, if anything, else (for
+   * expansions) whatever displayLanguage is fixed in the expansion parameters - the same
+   * approach as the version handling in decideWhichServer()
+   */
+  private String effectiveLanguage(String language, boolean expand) {
+    if (language != null) {
+      language = language.trim();
+      if (language.isEmpty()) {
+        language = null;
+      }
+    }
+    if (language == null && expand && expParameters != null) {
+      for (ParametersParameterComponent p : expParameters.getParameter()) {
+        if ("displayLanguage".equals(p.getName()) && p.hasValuePrimitive()) {
+          language = p.getValue().primitiveValue();
+        }
+      }
+    }
+    return language;
+  }
+
+  private ServerOptionList decideWhichServer(String url, String language) {
     if (IGNORE_TX_REGISTRY || !useEcosystem) {
       return new ServerOptionList(url, getMasterClient().getAddress());
     }
@@ -441,9 +529,13 @@ public class TerminologyClientManager {
     if (usage != null) {
       request = request + "&usage="+usage;
     } 
+    if (language != null) {
+      request = request + "&language="+Utilities.URLEncode(language);
+    }
     try {
       ServerOptionList ret = new ServerOptionList(url);
-      JsonObject json = JsonParser.parseObjectFromUrl(request);
+      ret.language = language;
+      JsonObject json = fetchRegistryJson(request);
       for (JsonObject item : json.getJsonObjects("authoritative")) {
           ret.authoritative.add(item.asString("url"));
       }
@@ -470,23 +562,21 @@ public class TerminologyClientManager {
       return serverSupportMap.get(key);
     }
     try {
-      var client = findClient(server, null, false);
+      var client = findClientContext(server, null, false);
       Bundle bnd = client.getClient().search("CodeSystem",
         canonical.contains("|")
           ? "?url=" + Utilities.escapeUrl(canonical.substring(0, canonical.indexOf("|")))+"&version="+Utilities.escapeUrl(canonical.substring(canonical.indexOf("|")+1))
           : "?url=" + Utilities.escapeUrl(canonical));
-      if (bnd.getEntry().size() == 1 && bnd.getEntry().get(0).hasResource() && bnd.getEntry().get(0).getResource() instanceof CodeSystem) {
-        CodeSystem cs = (CodeSystem) bnd.getEntry().get(0).getResource();
-        boolean ok = cs.getContent() == Enumerations.CodeSystemContentMode.COMPLETE || cs.getContent() == Enumerations.CodeSystemContentMode.FRAGMENT;
+      if (bnd.getEntry().size() > 0) {
+        boolean ok = anyUsableCodeSystem(bnd);
         serverSupportMap.put(key, ok);
         return ok;
       }
       if (canonical.contains("|")) {
         bnd = client.getClient().search("CodeSystem",
           "?url=" + Utilities.escapeUrl(canonical.substring(0, canonical.indexOf("|"))));
-        if (bnd.getEntry().size() == 1 && bnd.getEntry().get(0).hasResource() && bnd.getEntry().get(0).getResource() instanceof CodeSystem) {
-          CodeSystem cs = (CodeSystem) bnd.getEntry().get(0).getResource();
-          boolean ok = cs.getContent() == Enumerations.CodeSystemContentMode.COMPLETE || cs.getContent() == Enumerations.CodeSystemContentMode.FRAGMENT;
+        if (bnd.getEntry().size() > 0) {
+          boolean ok = anyUsableCodeSystem(bnd);
           serverSupportMap.put(key, ok);
           return ok;
         }
@@ -495,6 +585,24 @@ public class TerminologyClientManager {
       // nothing
     }
     serverSupportMap.put(key, false);
+    return false;
+  }
+
+  /**
+   * A server supports a code system if any version it hosts has usable content.
+   * Servers commonly host multiple versions of the same code system (e.g. ANZSCO
+   * on the AU servers) - this used to require exactly one search match, which
+   * wrongly disqualified any server holding more than one version.
+   */
+  private boolean anyUsableCodeSystem(Bundle bnd) {
+    for (Bundle.BundleEntryComponent be : bnd.getEntry()) {
+      if (be.hasResource() && be.getResource() instanceof CodeSystem) {
+        CodeSystem cs = (CodeSystem) be.getResource();
+        if (cs.getContent() == Enumerations.CodeSystemContentMode.COMPLETE || cs.getContent() == Enumerations.CodeSystemContentMode.FRAGMENT) {
+          return true;
+        }
+      }
+    }
     return false;
   }
 
@@ -512,11 +620,20 @@ public class TerminologyClientManager {
   }
 
   /**
-   * Release every server cache (best-effort), e.g. on worker context unload.
+   * Release this manager's hold on every server context, e.g. on worker context
+   * unload. A context shared with another manager (see copy()) keeps working for
+   * that manager; a context nobody else holds releases its owned server cache
+   * (best-effort). Idempotent, and it must be: releasing twice would make a shared
+   * context think it had lost a holder it never had. Once this manager has shut
+   * down, its contexts must not be used for further requests.
    */
-  public void endCaches() {
+  public void shutdown() {
+    if (isShutdown) {
+      return;
+    }
+    isShutdown = true;
     for (TerminologyClientContext server : serverList) {
-      server.endCache();
+      server.shutdown();
     }
   }
   
@@ -549,6 +666,12 @@ public class TerminologyClientManager {
   public TerminologyClientContext setMasterClient(ITerminologyClient client, boolean useEcosystem) throws IOException {
     this.useEcosystem = useEcosystem;
     TerminologyClientContext terminologyClientContext = new TerminologyClientContext(client, cache, true, logger);
+    // Note: the cleared contexts are deliberately NOT released here. Releasing one
+    // that turned out to be the last holder would end its cache - and if it shared
+    // this client, the context just constructed above has already adopted that very
+    // cache-id from the client's header, so we would be closing the cache we are
+    // about to use. Leaving the hold means an abandoned cache lives until the
+    // server's idle timeout instead, which is the harmless direction to be wrong in.
     serverList.clear();
     serverList.add(terminologyClientContext);
     serverMap.put(client.getAddress(), terminologyClientContext);
@@ -592,7 +715,12 @@ public class TerminologyClientManager {
               if (pair.has("server")) {
                 resMap.put(pair.asString("system"), new ServerOptionList(url, pair.asString("server")));
               } else {
-                resMap.put(pair.asString("system"), new ServerOptionList(url, pair.getStrings("authoritative"), pair.getStrings("candidates")));
+                ServerOptionList sol = new ServerOptionList(url, pair.getStrings("authoritative"), pair.getStrings("candidates"));
+                if (sol.authoritative.isEmpty() && sol.candidates.isEmpty()) {
+                  continue; // don't reload a persisted empty resolution (written by older versions) - re-ask the registry
+                }
+                sol.language = pair.asString("language");
+                resMap.put(pair.asString("system"), sol);
               }
             }
           }
@@ -607,11 +735,17 @@ public class TerminologyClientManager {
     if (cacheFile != null && cache.getFolder() != null) {
       JsonObject json = new JsonObject();
       for (String s : Utilities.sorted(resMap.keySet())) {
+        ServerOptionList sol = resMap.get(s);
+        if (sol.authoritative.isEmpty() && sol.candidates.isEmpty()) {
+          continue; // an empty resolution isn't worth remembering across runs - it may have been transient (registry outage etc), so re-ask next time
+        }
         JsonObject si = new JsonObject();
         json.forceArray("systems").add(si);
         si.add("system", s);
-        ServerOptionList sol = resMap.get(s);
         si.add("url", sol.url);
+        if (sol.language != null) {
+          si.add("language", sol.language);
+        }
         si.add("authoritative", sol.authoritative);
         si.add("candidates", sol.candidates);
       }
@@ -687,7 +821,7 @@ public class TerminologyClientManager {
           if (usage != null) {
             request = request + "&usage="+usage;
           }
-          JsonObject json = JsonParser.parseObjectFromUrl(request);
+          JsonObject json = fetchRegistryJson(request);
           for (JsonObject item : json.getJsonObjects("authoritative")) {
             if (server == null) {
               server = item.asString("url");
@@ -795,7 +929,7 @@ public class TerminologyClientManager {
     }
     String server = null;
     try {
-      JsonObject json = JsonParser.parseObjectFromUrl(request);
+      JsonObject json = fetchRegistryJson(request);
       for (JsonObject item : json.getJsonObjects("authoritative")) {
         if (server == null) {
           server = item.asString("url");
